--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,7 @@
                                     <div class="fw-bold">
                                         Dan Kavanagh
                                         <span class="fw-bold text-primary mx-1">/</span>
-                                        Computer Science with Artificial Intelligence student
+                                        Software Engineering student
                                     </div>
                                 </div>
                             </div>
