--- a/templates/TSLA.html
+++ b/templates/TSLA.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="row gx-5 justify-content-center mt-5">
                         <div class="text-center">
-                            <p class="lead fw-normal text-muted mb-0">Each time this page is loaded, the Polynomia Regression model is retrained based on newly dowloaded data from Yahoo Finance - ensuring the most up-to-date predictions.</p>
+                            <p class="lead fw-normal text-muted mb-0">Each time this page is loaded, the Polynomial Regression model is retrained based on newly dowloaded data from Yahoo Finance - ensuring the most up-to-date predictions.</p>
                         </div>
                     </div>
                 </div>
